--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ nav ul li {
     float: left;
 }
 
-nav ul li a, .dropbtn {
+nav ul li a {
     display: block;
     color: white;
     text-align: center;
@@ -59,38 +59,8 @@ nav ul li a, .dropbtn {
     text-decoration: none;
 }
 
-nav ul li a:hover, .dropdown:hover .dropbtn {
+nav ul li a:hover {
     background-color: #111;
-}
-
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
-.show {
-    display: block;
 }
 
 section {
